--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy Docker Images
+name: Deploy WebSite
 on:
   push:
     branches:
@@ -11,7 +11,8 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-      - uses: actions/checkout@v3
+      - name: Check
+        uses: actions/checkout@v3
 
 #      - name: Install dependencies
 #        run: yarn
@@ -19,15 +20,13 @@ jobs:
 #      - name: Build
 #        run: yarn build
 
-      - name: Deploy
-        uses: reggionick/s3-deploy@v3
+      - name: Deploy to S3
+        uses: jakejarvis/s3-sync-action@master
         with:
-          folder: apps/web
-          bucket: ${{ secrets.S3_BUCKET }}
-          bucket-region: ${{ secrets.AWS_REGION }}
-#          dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
-          invalidation: /
-          delete-removed: true
-          no-cache: true
-          private: true
-          files-to-include: ".*/*,*/*,**"
+          args: --delete --exclude '.git*/*'
+        env:
+          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          SOURCE_DIR: 'apps/web'
