--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^6.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "eslint": "8.22.0",
     "joi": "^17.9.1",
     "mongoose": "^7.0.3",
     "reflect-metadata": "^0.1.13",
