Add google auth

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -24,7 +24,9 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "^9.2.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "class-transformer": "^0.5.1",
@@ -32,6 +34,9 @@
     "eslint": "8.22.0",
     "joi": "^17.9.1",
     "mongoose": "^7.0.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
