--- a/shared/env/.env.test
+++ b/shared/env/.env.test
@@ -7,3 +7,9 @@ BOOKMARKS_DB_PWD=bookmarks
 
 ######## MONITOR SERVER ########
 BOOKMARKS_SERVER_PORT=3002
+
+######## AUTH ##########
+BOOKMARKS_GOOGLE_CLIENT_ID=google_client_id
+BOOKMARKS_GOOGLE_CLIENT_SECRET=google_client_secret
+BOOKMARKS_GOOGLE_CALLBACK_URL=http://localhost:3000
+BOOKMARKS_JWT_SECRET=some_jwt_secret_kEy
