--- a/shared/env/.env.defaults
+++ b/shared/env/.env.defaults
@@ -5,5 +5,11 @@ BOOKMARKS_DB_USER=bookmarks
 BOOKMARKS_DB_SCHEMA=bookmarks
 BOOKMARKS_DB_PWD=bookmarks
 
-######## MONITOR SERVER ########
+######## SERVER ########
 BOOKMARKS_SERVER_PORT=3000
+
+######## AUTH ##########
+BOOKMARKS_GOOGLE_CLIENT_ID=google_client_id
+BOOKMARKS_GOOGLE_CLIENT_SECRET=google_client_secret
+BOOKMARKS_GOOGLE_CALLBACK_URL=http://localhost:3000
+BOOKMARKS_JWT_SECRET=some_jwt_secret_kEy
