fix server deployment. fix docker image build configuration

--- a/dev-ops/Dockerfile
+++ b/dev-ops/Dockerfile
@@ -14,13 +14,14 @@ FROM node:18-alpine
 ARG BOOKMARKS_GOOGLE_CALLBACK_URL
 ARG BOOKMARKS_GOOGLE_CLIENT_ID
 ARG BOOKMARKS_GOOGLE_CLIENT_SECRET
-ARG BOOKMARKS_DB_HOST
+
+# host.docker.internal indicates docker contaniner ip
+ENV BOOKMARKS_DB_HOST=host.docker.internal
 
 #env from arguments
 ENV BOOKMARKS_GOOGLE_CALLBACK_URL=$BOOKMARKS_GOOGLE_CALLBACK_URL
 ENV BOOKMARKS_GOOGLE_CLIENT_ID=$BOOKMARKS_GOOGLE_CLIENT_ID
 ENV BOOKMARKS_GOOGLE_CLIENT_SECRET=$BOOKMARKS_GOOGLE_CLIENT_SECRET
-ENV BOOKMARKS_DB_HOST=$BOOKMARKS_DB_HOST
 
 WORKDIR /bookmarks
 
