Change db ports mapping

--- a/.github/workflows/build-server.yaml
+++ b/.github/workflows/build-server.yaml
@@ -41,6 +41,7 @@ jobs:
             BOOKMARKS_GOOGLE_CLIENT_ID=${{ secrets.BOOKMARKS_GOOGLE_CLIENT_ID }}
             BOOKMARKS_GOOGLE_CLIENT_SECRET=${{ secrets.BOOKMARKS_GOOGLE_CLIENT_SECRET }}
             BOOKMARKS_DB_HOST=${{ secrets.BOOKMARKS_DB_HOST }}
+            BOOKMARKS_DB_PORT=${{ vars.BOOKMARKS_DB_PORT }}
           tags: |
             yzhbankov/bookmarks:${{ steps.set_version.outputs.no-dash }}
             yzhbankov/bookmarks:latest
