--- a/dev-ops/Dockerfile
+++ b/dev-ops/Dockerfile
@@ -14,6 +14,7 @@ FROM node:18-alpine
 ARG BOOKMARKS_GOOGLE_CALLBACK_URL
 ARG BOOKMARKS_GOOGLE_CLIENT_ID
 ARG BOOKMARKS_GOOGLE_CLIENT_SECRET
+ARG BOOKMARKS_DB_PORT
 
 # host.docker.internal indicates docker contaniner ip
 ENV BOOKMARKS_DB_HOST=host.docker.internal
@@ -22,6 +23,7 @@ ENV BOOKMARKS_DB_HOST=host.docker.internal
 ENV BOOKMARKS_GOOGLE_CALLBACK_URL=$BOOKMARKS_GOOGLE_CALLBACK_URL
 ENV BOOKMARKS_GOOGLE_CLIENT_ID=$BOOKMARKS_GOOGLE_CLIENT_ID
 ENV BOOKMARKS_GOOGLE_CLIENT_SECRET=$BOOKMARKS_GOOGLE_CLIENT_SECRET
+ENV BOOKMARKS_DB_PORT=$BOOKMARKS_DB_PORT
 
 WORKDIR /bookmarks
 
@@ -31,5 +33,6 @@ COPY --from=build-alpine /bookmarks/ ./
 
 EXPOSE 3000
 EXPOSE 27017
+EXPOSE 27018
 
 ENTRYPOINT ./entrypoint.sh
