--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -14,11 +14,11 @@ jobs:
       - name: Check
         uses: actions/checkout@v3
 
-#      - name: Install dependencies
-#        run: yarn
+      - name: Install dependencies
+        run: yarn
 
-#      - name: Build
-#        run: yarn build
+      - name: Build
+        run: yarn build:client
 
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
