--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "eslint": "8.22.0",
+    "google-auth-library": "^8.7.0",
     "joi": "^17.9.1",
     "mongoose": "^7.0.3",
     "passport": "^0.6.0",
