--- a/shared/env/.env.test
+++ b/shared/env/.env.test
@@ -13,3 +13,7 @@ BOOKMARKS_GOOGLE_CLIENT_ID=google_client_id
 BOOKMARKS_GOOGLE_CLIENT_SECRET=google_client_secret
 BOOKMARKS_GOOGLE_CALLBACK_URL=http://localhost:3000
 BOOKMARKS_JWT_SECRET=some_jwt_secret_kEy
+
+######## REACT ##########
+REACT_APP_BOOKMARKS_GOOGLE_CLIENT_ID=client_id
+REACT_APP_BOOKMARKS_BASE_URL=http://localhost:3000
