--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -15,10 +15,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: yarn
+        run: yarn install
 
       - name: Build
-        run: yarn build:client
+        run: CI=false yarn build:client
 
       - name: Deploy to S3
         uses: jakejarvis/s3-sync-action@master
