Fix client side env github actions

--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Create env file
         run: |
           touch ./apps/client/.env
-          echo REACT_APP_BOOKMARKS_GOOGLE_CLIENT_ID=${{ vars.BOOKMARKS_GOOGLE_CLIENT_ID }} >> ./apps/client/.env
+          echo REACT_APP_BOOKMARKS_GOOGLE_CLIENT_ID=${{ secrets.BOOKMARKS_GOOGLE_CLIENT_ID }} >> ./apps/client/.env
           echo REACT_APP_BOOKMARKS_BASE_URL=${{ vars.BOOKMARKS_BASE_URL }} >> ./apps/client/.env
           cat ./apps/client/.env
 
