--- a/shared/env/.env.test
+++ b/shared/env/.env.test
@@ -5,8 +5,11 @@ BOOKMARKS_DB_USER=bookmarks
 BOOKMARKS_DB_SCHEMA=bookmarks
 BOOKMARKS_DB_PWD=bookmarks
 
-######## MONITOR SERVER ########
-BOOKMARKS_SERVER_PORT=3002
+######## SERVER ########
+BOOKMARKS_SERVER_PORT=3000
+
+######## CLIENT ########
+BOOKMARKS_DOMAIN=localhost
 
 ######## AUTH ##########
 BOOKMARKS_GOOGLE_CLIENT_ID=google_client_id
