--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -33,8 +33,8 @@ jobs:
         with:
           args: --delete --exclude '.git*/*'
         env:
-          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET }}
+          AWS_S3_BUCKET: ${{ vars.S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_REGION: ${{ vars.AWS_REGION }}
           SOURCE_DIR: 'apps/client/build'
