--- a/shared/env/.env.defaults
+++ b/shared/env/.env.defaults
@@ -8,6 +8,9 @@ BOOKMARKS_DB_PWD=bookmarks
 ######## SERVER ########
 BOOKMARKS_SERVER_PORT=3000
 
+######## CLIENT ########
+BOOKMARKS_DOMAIN=localhost
+
 ######## AUTH ##########
 BOOKMARKS_GOOGLE_CLIENT_ID=google_client_id
 BOOKMARKS_GOOGLE_CLIENT_SECRET=google_client_secret
