--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
+    "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
