Add BOOKMARKS_DOMAIN env to Docker file

--- a/dev-ops/Dockerfile
+++ b/dev-ops/Dockerfile
@@ -14,6 +14,7 @@ FROM node:18-alpine
 ARG BOOKMARKS_GOOGLE_CALLBACK_URL
 ARG BOOKMARKS_GOOGLE_CLIENT_ID
 ARG BOOKMARKS_GOOGLE_CLIENT_SECRET
+ARG BOOKMARKS_DOMAIN
 
 # host.docker.internal indicates docker contaniner ip
 ENV BOOKMARKS_DB_HOST=host.docker.internal
@@ -22,6 +23,7 @@ ENV BOOKMARKS_DB_HOST=host.docker.internal
 ENV BOOKMARKS_GOOGLE_CALLBACK_URL=$BOOKMARKS_GOOGLE_CALLBACK_URL
 ENV BOOKMARKS_GOOGLE_CLIENT_ID=$BOOKMARKS_GOOGLE_CLIENT_ID
 ENV BOOKMARKS_GOOGLE_CLIENT_SECRET=$BOOKMARKS_GOOGLE_CLIENT_SECRET
+ENV BOOKMARKS_DOMAIN=$BOOKMARKS_DOMAIN
 
 WORKDIR /bookmarks
 
