--- a/apps/lambdas/bookmarks/package.json
+++ b/apps/lambdas/bookmarks/package.json
@@ -5,5 +5,8 @@
   "version": "1.0",
   "main": "index.js",
   "author": "yzhbankov",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2"
+  }
 }
