--- a/apps/lambdas/bookmarks/package.json
+++ b/apps/lambdas/bookmarks/package.json
@@ -7,6 +7,7 @@
   "author": "yzhbankov",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1573.0",
     "jsonwebtoken": "^9.0.2"
   }
 }
